src/assets/css/tailwind.css
@tailwind base;
@import '../fonts/Myriad-Set-Pro/font.css';

html {
	@apply font-body;
	overflow: -moz-scrollbars-none;
	scrollbar-width: none;
}
body {
	margin: 0;
	overflow: hidden;
}

@tailwind components;

.nav-links {
	@apply text-xl mx-5;
}

.hover-card {
	@apply flex py-6 px-6 rounded-card items-center;
}

.hover-card:hover {
	@apply bg-white;
}

.footer-input {
	@apply appearance-none bg-transparent text-jacksons_purple-200 text-xl w-48 px-1 border-b border-black;
}

.footer-input:focus {
	@apply outline-none border-jacksons_purple-200;
}

input::placeholder {
	@apply text-gray-800;
}

textarea::placeholder {
	@apply text-gray-800;
}

@tailwind utilities;

.navbar {
	background-color: rgba(255, 255, 255, 0.75);
}

.btn {
	border-radius: 100rem;

	box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
	border: solid 2px transparent;
	background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
		linear-gradient(101deg, #2d3494, #7a539d);

	background-origin: border-box;
	background-clip: content-box, border-box;
	box-shadow: 2px 1000px 1px rgba(255, 255, 255, 0) inset;
}

.bg-gradient {
	background: linear-gradient(to right, #2d3494, #7a539d);
}

.border-gradient {
	border-image-source: linear-gradient(to right, #2d3494, #7a539d);
	border-image-slice: 20;
}

:hover.card-shadow {
	box-shadow: -2px 8px 10px rgba(0, 0, 0, 0.25);
}

.footer-gradient {
	background: linear-gradient(96.25deg, #7a539d 0.16%, #323790 52.86%, #9752d5 99.37%);
}

